...
                fit: BoxFit.cover,
                radius: BorderRadius.circular(BaseRadius.pill),
              ),
            ),
            SizedBox(height: BaseSpacing.md),
            CustomText(
              text: 'Login to continue',
              color: AppColors.black,
              fontSize: AppFontSize.small2,
              fontWeight: FontWeight.w700,
            ),
            SizedBox(height: BaseSpacing.xxs),
            CustomText(
...
              textAlign: TextAlign.center,
              color: AppColors.greyDefault,
              fontSize: AppFontSize.verySmall,
            ),
            SizedBox(height: BaseSpacing.xl),
            PrimaryButton(
              label: 'Continue with Google',
              onPressed: onContinueWithGoogle,
            ),
          ],
        ),
      ),
    );
...
