...
            mainAxisAlignment: MainAxisAlignment.end,
            children: [
              SvgIcon(
                assetName: AppIcons.logoutIcon,
                onTap: () {
                  showCustomDialog(
                    title: 'Logout',
                    content: 'Are you sure you want to logout?',
                    leftButtonName: 'Cancel',
                    rightButtonName: 'Logout',
                    onLeftButtonTap: () => Get.back(),
                    onRightButtonTap: () async {
                      await AuthRepository().logout();
...
